--- a/kira-core/Cargo.toml
+++ b/kira-core/Cargo.toml
@@ -4,3 +4,12 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+adb_client = "3.1.1"
+anyhow.workspace = true
+serde.workspace = true
+thiserror = "2.0.18"
+tokio.workspace = true
+
+
+[dev-dependencies]
+tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
