Feat (Fastboot): Add FastbootCore implementation and integrate with device module
Signed-off-by: pavelc4 <pavelc4@users.noreply.github.com>

--- a/kira-core/Cargo.toml
+++ b/kira-core/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 adb_client = "3.1.1"
+fastboot-protocol = "0.3.1"
 anyhow.workspace = true
 serde.workspace = true
 thiserror = "2.0.18"
