--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
 		"@sveltejs/kit": "^2.50.2",
 		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/vite": "^4.2.1",
+		"@tauri-apps/cli": "^2.10.0",
 		"@types/node": "^24",
-		"eslint": "^10.0.2",
 		"apexcharts": "^5.6.0",
 		"autoprefixer": "^10.4.27",
+		"eslint": "^10.0.2",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.14.0",
 		"globals": "^17.3.0",
